--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rainfall Prediction</title>
-  <link rel="stylesheet" href="../public/static/main.css">
+  <link rel="stylesheet" href="../static/css/main.css">
 </head>
 
 <body>
@@ -253,7 +253,7 @@
     Developed by Ishwar Kumar Mishra, Naman Gangrade, and Prithvi Suresh.
   </footer>
 
-  <script src="../public/js/index.js"></script>
+  <script src="../static/js/index.js"></script>
 </body>
 
 </html>
