changed all input fields to required

--- a/template/index.html
+++ b/template/index.html
@@ -60,59 +60,59 @@
         <div class="row">
           <div class="col1">
             <div>
-              <input type="number" id="date" name="date" placeholder="Month">
+              <input type="number" id="date" name="date" placeholder="Month" required>
             </div>
             <div>
-              <input type="text" id="mintemp" name="mintemp" placeholder="Minimum Temperature">
+              <input type="text" id="mintemp" name="mintemp" placeholder="Minimum Temperature" required>
             </div>
             <div>
-              <input type="text" id="maxtemp" name="maxtemp" placeholder="Maximum Temperature">
+              <input type="text" id="maxtemp" name="maxtemp" placeholder="Maximum Temperature" required>
             </div>
             <div>
-              <input type="text" id="rainfall" name="rainfall" placeholder="Rainfall in cm">
+              <input type="text" id="rainfall" name="rainfall" placeholder="Rainfall in cm" required>
             </div>
             <div>
-              <input type="text" id="evaporation" name="evaporation" placeholder="Evaporation">
+              <input type="text" id="evaporation" name="evaporation" placeholder="Evaporation" required>
             </div>
             <div>
-              <input type="text" id="sunshine" name="sunshine" placeholder="Sunshine">
+              <input type="text" id="sunshine" name="sunshine" placeholder="Sunshine" required>
             </div>
           </div>
           <div class="col2">
             <div>
-              <input type="text" id="windgustspeed" name="windgustspeed" placeholder="Wind Gust Speed">
+              <input type="text" id="windgustspeed" name="windgustspeed" placeholder="Wind Gust Speed" required>
             </div>
             <div>
-              <input type="text" id="windspeed9am" name="windspeed9am" placeholder="Wind Speed 9am">
+              <input type="text" id="windspeed9am" name="windspeed9am" placeholder="Wind Speed 9am" required>
             </div>
             <div>
-              <input type="text" id="windspeed3pm" name="windspeed3pm" placeholder="Wind Speed 3pm">
+              <input type="text" id="windspeed3pm" name="windspeed3pm" placeholder="Wind Speed 3pm" required>
             </div>
             <div>
-              <input type="text" id="humidity9am" name="humidity9am" placeholder="Humidity 9am">
+              <input type="text" id="humidity9am" name="humidity9am" placeholder="Humidity 9am" required>
             </div>
             <div>
-              <input type="text" id="humidity3pm" name="humidity3pm" placeholder="Humidity 3pm">
+              <input type="text" id="humidity3pm" name="humidity3pm" placeholder="Humidity 3pm" required>
             </div>
             <div>
-              <input type="text" id="pressure9am" name="pressure9am" placeholder="Pressure 9am">
+              <input type="text" id="pressure9am" name="pressure9am" placeholder="Pressure 9am" required>
             </div>
           </div>
           <div class="col3">
             <div>
-              <input type="text" id="pressure3pm" name="pressure3pm" placeholder="Pressure 3pm">
+              <input type="text" id="pressure3pm" name="pressure3pm" placeholder="Pressure 3pm" required>
             </div>
             <div>
-              <input type="text" id="temp9am" name="temp9am" placeholder="Temperature 9am">
+              <input type="text" id="temp9am" name="temp9am" placeholder="Temperature 9am" required>
             </div>
             <div>
-              <input type="text" id="temp3pm" name="temp3pm" placeholder="Temperature 3pm">
+              <input type="text" id="temp3pm" name="temp3pm" placeholder="Temperature 3pm" required>
             </div>
             <div>
-              <input type="text" id="cloud9am" name="cloud9am" placeholder="Cloud 9am">
+              <input type="text" id="cloud9am" name="cloud9am" placeholder="Cloud 9am" required>
             </div>
             <div>
-              <input type="text" id="cloud3pm" name="cloud3pm" placeholder="Cloud 3pm">
+              <input type="text" id="cloud3pm" name="cloud3pm" placeholder="Cloud 3pm" required>
             </div>
             <div>
               <select id="location" name="location" aria-label="Location">
