added units in placeholders in index.html and created output.css file for output html pages

--- a/template/index.html
+++ b/template/index.html
@@ -63,56 +63,56 @@
               <input type="number" id="date" name="date" placeholder="Month" required>
             </div>
             <div>
-              <input type="text" id="mintemp" name="mintemp" placeholder="Minimum Temperature" required>
+              <input type="text" id="mintemp" name="mintemp" placeholder="Min Temperature in °C" required>
             </div>
             <div>
-              <input type="text" id="maxtemp" name="maxtemp" placeholder="Maximum Temperature" required>
+              <input type="text" id="maxtemp" name="maxtemp" placeholder="Max Temperature in °C" required>
             </div>
             <div>
-              <input type="text" id="rainfall" name="rainfall" placeholder="Rainfall in cm" required>
+              <input type="text" id="rainfall" name="rainfall" placeholder="Rainfall in mm" required>
             </div>
             <div>
-              <input type="text" id="evaporation" name="evaporation" placeholder="Evaporation" required>
+              <input type="text" id="evaporation" name="evaporation" placeholder="Evaporation in mm" required>
             </div>
             <div>
-              <input type="text" id="sunshine" name="sunshine" placeholder="Sunshine" required>
+              <input type="text" id="sunshine" name="sunshine" placeholder="Sunshine (hours)" required>
             </div>
           </div>
           <div class="col2">
             <div>
-              <input type="text" id="windgustspeed" name="windgustspeed" placeholder="Wind Gust Speed" required>
+              <input type="text" id="windgustspeed" name="windgustspeed" placeholder="Wind Gust Speed kmph" required>
             </div>
             <div>
-              <input type="text" id="windspeed9am" name="windspeed9am" placeholder="Wind Speed 9am" required>
+              <input type="text" id="windspeed9am" name="windspeed9am" placeholder="Wind Speed 9am kmph" required>
             </div>
             <div>
-              <input type="text" id="windspeed3pm" name="windspeed3pm" placeholder="Wind Speed 3pm" required>
+              <input type="text" id="windspeed3pm" name="windspeed3pm" placeholder="Wind Speed 3pm kmph" required>
             </div>
             <div>
-              <input type="text" id="humidity9am" name="humidity9am" placeholder="Humidity 9am" required>
+              <input type="text" id="humidity9am" name="humidity9am" placeholder="Humidity 9am in %" required>
             </div>
             <div>
-              <input type="text" id="humidity3pm" name="humidity3pm" placeholder="Humidity 3pm" required>
+              <input type="text" id="humidity3pm" name="humidity3pm" placeholder="Humidity 3pm in %" required>
             </div>
             <div>
-              <input type="text" id="pressure9am" name="pressure9am" placeholder="Pressure 9am" required>
+              <input type="text" id="pressure9am" name="pressure9am" placeholder="Pressure 9am in hectopascals" required>
             </div>
           </div>
           <div class="col3">
             <div>
-              <input type="text" id="pressure3pm" name="pressure3pm" placeholder="Pressure 3pm" required>
+              <input type="text" id="pressure3pm" name="pressure3pm" placeholder="Pressure 3pm in hectopascals" required>
             </div>
             <div>
-              <input type="text" id="temp9am" name="temp9am" placeholder="Temperature 9am" required>
+              <input type="text" id="temp9am" name="temp9am" placeholder="Temperature 9am in °C" required>
             </div>
             <div>
-              <input type="text" id="temp3pm" name="temp3pm" placeholder="Temperature 3pm" required>
+              <input type="text" id="temp3pm" name="temp3pm" placeholder="Temperature 3pm in °C" required>
             </div>
             <div>
-              <input type="text" id="cloud9am" name="cloud9am" placeholder="Cloud 9am" required>
+              <input type="text" id="cloud9am" name="cloud9am" placeholder="Cloud 9am eighths" required>
             </div>
             <div>
-              <input type="text" id="cloud3pm" name="cloud3pm" placeholder="Cloud 3pm" required>
+              <input type="text" id="cloud3pm" name="cloud3pm" placeholder="Cloud 3pm eighths" required>
             </div>
             <div>
               <select id="location" name="location" aria-label="Location">
@@ -248,10 +248,6 @@
       </div>
     </form>
   </section>
-
-  <footer>
-    Developed by Ishwar Kumar Mishra, Naman Gangrade, and Prithvi Suresh.
-  </footer>
 
   <script src="../static/js/index.js"></script>
 </body>
